--- a/blog/post-1/index.mdx
+++ b/blog/post-1/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: "My First Post"
 date: "2021-07-23"
+hero_image: "./bg.jpg"
+hero_image_alt: "hero alt 1"
+hero_image_credit_text: "AB"
+hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
 ---
 
 This is my first blog post! Isn't it *great*?
